CTOO-421 (internal): Add an independent spec runner project (#307)
https://treasure-data.atlassian.net/browse/CTOO-421